# typesim

./: LICENSE  README.md  pyproject.toml  text.txt
src/typesim/: __init__.py  __main__.py  config.py  config_manager.py  gemini_helper.py  keyboard_ctrl.py  shortcuts.py  tui.py  typing_engine.py
website/: PORTFOLIO_PROMPT.md  README.md  mdx-components.tsx  next.config.ts  package-lock.json  package.json
website/app/: globals.css  layout.tsx  page.tsx
website/app/docs/: page.tsx
website/app/docs/[...slug]/: not-found.tsx  page.tsx
website/components/: code-block.tsx  docs-layout.tsx  feature-card.tsx  footer.tsx  terminal.tsx  typing-demo.tsx
website/content/docs/: api.mdx  configuration.mdx  examples.mdx  getting-started.mdx  installation.mdx  usage.mdx
